--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/christina-wocintechchat-com-5UHFPbvBBzY-unsplash.jpg" alt="" />
+					<img src="christina-wocintechchat-com-5UHFPbvBBzY-unsplash.jpg" alt="" />
 					<div class="inner">
 						<h2><a href="#">Solutions Engineer</a></h2>
 					</div>
 				</article>
 				<article>
-					<img src="images/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg"  alt="" />
+					<img src="nick-morrison-FHnnjk1Yj7Y-unsplash.jpg"  alt="" />
 					<div class="inner">
 						<h2><a href="#">Technical Writer</a></h2>
 					</div>
@@ -89,7 +89,7 @@
 						<p>Recognizing this pervasive issue, I identified an opportunity to bridge these gaps between Stakeholders, Management, and Engineers. Driven by my passion for problem-solving, I embarked on a journey to enact meaningful change. I focused on improving communication, enhancing operational efficiency, and refining documentation practices to foster a more cohesive and productive environment for all involved.</p>
 						<p>Now transitioning from Engineer to Project Manager, I am dedicated to leveraging my experiences to drive successful project outcomes. Join me on this journey as I apply my expertise to unite teams, streamline processes, and ensure project success.</p>
 						</div>
-						<span class="image"><img src="images/IMG_2232 edited 3.JPG" alt="" /></span>
+						<span class="image"><img src="IMG_2232 edited 3.JPG" alt="" /></span>
 					</section>
 				</div>
 			</section>
