--- a/greyhound acclimation.html
+++ b/greyhound acclimation.html
@@ -9,10 +9,10 @@
 		<title>Greyhound Acclimation</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/images/Favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/images/Favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/images/Favicon/favicon-16x16.png">
-		<link rel="manifest" href="/images/Favicon/site.webmanifest">
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="manifest" href="site.webmanifest">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -63,7 +63,7 @@
 
 					<!-- Content -->
 						<div class="content">
-							<a href="#" class="image fit"><img src="images/jack-swords-fSFyWM_kYvU-unsplash.jpg" alt="" /></a>
+							<a href="#" class="image fit"><img src="jack-swords-fSFyWM_kYvU-unsplash.jpg" alt="" /></a>
 							<h3>Deliverables</h3>
 							<ul>
 								<li>Detailed schedule for evening walks and outdoor play sessions.</li>
