--- a/everto vending.html
+++ b/everto vending.html
@@ -9,10 +9,10 @@
 		<title>Everto Vending</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/images/Favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/images/Favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/images/Favicon/favicon-16x16.png">
-		<link rel="manifest" href="/images/Favicon/site.webmanifest">
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="manifest" href="site.webmanifest">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -64,7 +64,7 @@
 
 					<!-- Content -->
 						<div class="content">
-							<a href="#" class="image fit"><img src="images/Untitled (Logo).png" alt="Logo" /></a>
+							<a href="#" class="image fit"><img src="Untitled (Logo).png" alt="Logo" /></a>
 							<h2>Challenges</h2>
 							<ul>
 								<li>Managing financial resources effectively to cover all necessary expenses.
@@ -108,7 +108,7 @@
 							</section>
 							<hr />
 							<section>
-								<a href="#" class="image fit"><img src="images/machine.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="machine.jpg" alt="" /></a>
 								<h2>Deliverables</h2>
 								<ul>
 									<li>Identify and secure high-traffic locations for vending machines.</li>
