--- a/knowledge base.html
+++ b/knowledge base.html
@@ -9,10 +9,10 @@
 		<title>Knowledge Base</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/images/Favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/images/Favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/images/Favicon/favicon-16x16.png">
-		<link rel="manifest" href="/images/Favicon/site.webmanifest">
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="manifest" href="site.webmanifest">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -64,7 +64,7 @@
 
 					<!-- Content -->
 						<div class="content">
-							<a href="#" class="image fit"><img src="images/Mockup KB.jpg" alt="Classroom" /></a>
+							<a href="#" class="image fit"><img src="Mockup KB.jpg" alt="Classroom" /></a>
 							<h2>Challenges and Solutions</h2>
 							<ul>
 								<p><b>Gaining approval:</b>Successfully pitched the Knowledge Base project to stakeholders, highlighting the long-term benefits of improved employee retention and client satisfaction.</p>
@@ -115,7 +115,7 @@
 							</section>
 							<hr />
 							<section>
-								<a href="#" class="image fit"><img src="images/Knowledge edited.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="Knowledge edited.jpg" alt="" /></a>
 								<h2>Deliverables</h2>
 								<ul>
 									<li>A fully functional Knowledge Base accessible to all company employees.</li>
