--- a/replacement.html
+++ b/replacement.html
@@ -9,10 +9,10 @@
 		<title>Replacement</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/images/Favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/images/Favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/images/Favicon/favicon-16x16.png">
-		<link rel="manifest" href="/images/Favicon/site.webmanifest">
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="manifest" href="site.webmanifest">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -64,7 +64,7 @@
 
 					<!-- Content -->
 						<div class="content">
-							<a href="#" class="image fit"><img src="images/replacement edited.jpg" alt="computer on a desk" /></a>
+							<a href="#" class="image fit"><img src="replacement edited.jpg" alt="computer on a desk" /></a>
 							<h2>Challenges</h2>
 							<ul>
 								    <li>Expedited shipping was not included in the original budget approval.</li>
@@ -103,7 +103,7 @@
                             </section>
                            
 							<section>
-								<a href="#" class="image fit"><img src="images/box-3887621_1280.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="box-3887621_1280.jpg" alt="" /></a>
 								<h2>Deliverables</h2>
 								<ul>
 									<li>Develop and share a comprehensive proposal that includes the necessity of expedited shipping due to equipment delays.</li>
