--- a/deployment.html
+++ b/deployment.html
@@ -63,7 +63,7 @@
 
 					<!-- Content -->
 						<div class="content">
-							<a href="#" class="image fit"><l81dsy6c.png" alt="" /></a>
+							<a href="#" class="image fit"><img src="l81dsy6c.png" alt="" /></a>
 							<h3>Deliverables</h3>
 							<ul>
 								<li><b>200 Managed Chromebooks:</b> Acquired and configured to meet the educational needs of the students.</li>
