--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<article>
-					<img src="Welcome edited.jpg"  alt="Window Office" />
+					<img src="welcome edited.jpg"  alt="Window Office" />
 					<div class="inner">
 						<h2><a href="#"></a>Welcome to my Portfolio</h2>
 					</div>
